Use Set.of instead of HashSet with Arrays.asList